Tilføj lidt af kapitel 2.2

--- a/EndeligeAutomater.tex
+++ b/EndeligeAutomater.tex
@@ -2,7 +2,7 @@
 % Denne fil indeholder noter til Endelige Automater (Kapitel 1 i Sipser)
 % Derudover indeholder den også mine løsninger til opgaver om endelige automater.
 % Opgaver:
-% Ingen
+% TODO: Tilføj undertitler hvor det giver mening
 %%%
 
 
