Tilføj eksempel på PDA

--- a/preamble.tex
+++ b/preamble.tex
@@ -87,6 +87,10 @@
 \pagestyle{plain}
 \usepackage[final]{pdfpages} % inserts pages from a pdf file
 
+
+\usepackage{multirow}
+
+
 % Page geometry for 10-inch tablets:
 \usepackage[papersize={148mm,197mm},
             top=21mm,
@@ -109,6 +113,8 @@
   linkcolor=LinkRed,
   urlcolor=LinkRed,
 }
+
+
 
 % Document colors
 \definecolor{SchemeLight}   {HTML} {686868}
