--- a/KontekstFrieSprog.tex
+++ b/KontekstFrieSprog.tex
@@ -324,7 +324,57 @@ En PDA $M = (Q, \Sigma, \Gamma, \delta, q_{0}, F)$ komputerer som følger. Den a
   \item $r_{m} \in F$. Den sidste state er en accept state.
 \end{enumerate}
 
+\subsection{Eksempler}%
+\label{subsec:pdaeksempler}
 
+\begin{example}[$\{0^{n}1^{n} | n \ge 0\}$]
+  Vi kigger på et eksempel af en formel definition af en PDA der genkender sproget $\{0^{n}1^{n} | n \geq 0\}$.
+  Lad $M_{1}$ være $(Q, \Sigma, \Gamma, \delta, q_{1}, F)$, hvor
+  \begin{enumerate}
+    \item $Q = \{q_{1}, q_{2}, q_{3}, q_{4}\}$.
+    \item $\Sigma = \{0,1\}$
+    \item $\Gamma = \{0, \$\}$
+    \item $F = \{q_{1}, q_{4}\}$
+    \item $\delta$ gives af følgende tabel, hvor tomme felter er $\emptyset$:
+          \begin{center}
+            % Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[ht]
+\begin{tabular}{l|lllllllll}
+\multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Input \\ Stak:\end{tabular}} & \multicolumn{3}{l|}{0}                                                                & \multicolumn{3}{l|}{1}                                                                  & \multicolumn{3}{l|}{$\varepsilon$}                                                     \\ \cline{2-10}
+                                                                        & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0}   & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$}  & \multicolumn{1}{l|}{$\varepsilon$} \\ \hline
+$q_1$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          & $\{(q_2, \$)\}$               \\ \cline{1-1}
+$q_2$                                                                   &                        &                         & $\{(q_2, 0)\}$                     & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        &                          &                                    \\ \cline{1-1}
+$q_3$                                                                   &                        &                         &                                    & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        & $\{(q_4, \varepsilon)\}$ &                                    \\ \cline{1-1}
+$q_4$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          &                                    \\ \cline{1-1}
+\end{tabular}
+\end{table}
+          \end{center}
+  \end{enumerate}
+          Altså betyder det at når den er i state 1, og den ser en tom stak, så pusher den \$ som symboliserer enden på strengen skal være nået. Når den er ved state 2, stakken er tom (den tomme streng), og den ser et 0, så skal den forblive ved state 2, og pushe et 0. Dette bliver den ved med for alle 0'er muligt. Hvis den måder et 1 tal når der er et 0 på stakken imens den er i state 2, skifter den til state 3, og popper fra stakken. Sidst, når den er i state 3 og strengen er færdiglæst, og der kun er et \$ tilbage på stakken, så er strengen accepteret.
+
+          \begin{figure}[ht]
+            \centering
+            \begin{tikzpicture}[>=Stealth,shorten >=1pt,node distance=2.8cm,on grid,auto]
+              \node[state, accepting, initial] (q1) {$q_1$};
+              \node[state, right=of q1] (q2) {$q_2$};
+              \node[state, below=of q2] (q3) {$q_3$};
+              \node[state, accepting, left=of q3] (q4) {$q_4$};
+
+              \path[->]
+              (q1) edge node {$\varepsilon, \varepsilon \rightarrow \$$} (q2)
+              (q2) edge[loop right] node {$0, \varepsilon \rightarrow 0$} (q2)
+              (q2) edge node {$1, 0 \rightarrow \varepsilon$} (q3)
+              (q3) edge[loop right] node {$1, 0 \rightarrow \varepsilon$} (q3)
+              (q3) edge node { $\varepsilon, \$ \rightarrow \varepsilon$ } (q4);
+            \end{tikzpicture}
+            \caption{\label{fig:sipser2.15} State diagram af PDA'en $M_1, L(M_1) = \{0^n 1^n  | n \ge 0 \}$}
+          \end{figure}
+
+
+          Vi kan også illustrere denne PDA i form af et state diagram, ligesom ved endelige automater. Se Figur~\ref{fig:sipser2.15}. Her betyder notationen $a, b \rightarrow c$ at når den ser et $a$ erstatter den $b$ på toppen af stakken med et $c$.
+
+\end{example}
 %% TODO: Nået til side  114
 
 
